--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
+    "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-rich-text-editor": "^2.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "reactstrap": "^8.5.1"
+    "reactstrap": "^8.5.1",
+    "uuidv4": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
